inclusão das coçunas doc de origem e valor na tabela de itens pagos

--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -77,10 +77,10 @@
    <div class="caixa w-90 p-4 mx-auto">
       <div class="border caixa-externa p-4 shadow-sm rounded">
          <div class="row align-items-center mb-3 px-3">
-            <h2 style="border-bottom: 4px solid orange;"
-               class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
-               que saíram do estoque
-            </h2>
+            <div class="col d-flex justify-content-between align-items-center bg-success py-2 rounded" style="border-bottom: 4px solid orange;">
+               <h2 class="text-white mt-0 fw-bold flex-grow-1 text-center">Itens que saíram do estoque</h2>
+               <a href="/generate-pdf-itens-pagos" class="btn btn-outline-light btn-header fw-bold ms-3">Gerar PDF</a>
+            </div>
          </div>
          <div class="table-container">
             <table class="table table-striped table-hover mb-0">
