correção na rota de pesqusa por tombo

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -194,7 +194,7 @@
                            <option selected>Escolha uma opção...</option>
                            <option value="galpao">ESTOQUE COLOG - GALPÃO</option>
                            <option value="sala">ESTOQUE COLOG - SALA</option>
-                           <option value="cabence">ESTOQUE COLOG - CABEMCE</option>
+                           <option value="cabemce">ESTOQUE COLOG - CABEMCE</option>
                         </select>
                      </div>
                   </div>
