--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -249,113 +249,114 @@
         });
       </script>
 
-      <script>
-        // Manipulação de Tombo e Modal /////////////////////////////////////////////
-        document.addEventListener('DOMContentLoaded', () => {
-          const pesquisaForm = document.getElementById('pesquisa-form');
-          const resultadosDiv = document.getElementById('resultados');
+    <script>
+      // Manipulação de Tombo e Modal /////////////////////////////////////////////
+      document.addEventListener('DOMContentLoaded', () => {
+        const pesquisaForm = document.getElementById('pesquisa-form');
+        const resultadosDiv = document.getElementById('resultados');
 
-          if (pesquisaForm) {
-            pesquisaForm.addEventListener('submit', async (e) => {
-              e.preventDefault();
-              const formData = new FormData(e.target);
-              const tombo = formData.get('tombo');
+        if (pesquisaForm) {
+          pesquisaForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            const tombo = formData.get('tombo');
 
-              if (tombo) {
-                try {
-                  const responseTombo = await fetch(`/fetch-info-tombo?tombo=${tombo}`);
-                  const dataTombo = await responseTombo.json();
-                  console.log("Dados do tombo recebidos do backend:", dataTombo);
+            if (tombo) {
+              try {
+                const responseTombo = await fetch(`/fetch-info-tombo?tombo=${tombo}`);
+                const dataTombo = await responseTombo.json();
+                console.log("Dados do tombo recebidos do backend:", dataTombo);
 
-                  if (dataTombo.infoTombo) {
-                    const entrada = dataTombo.infoTombo;
-                    const saida = entrada.saida;
+                if (dataTombo.infoTombo) {
+                  const entrada = dataTombo.infoTombo;
+                  const saida = dataTombo.infoSaida; // Corrigido para usar infoSaida
 
-                    const dataEntradaFormatada = new Date(entrada.data_de_entrada).toLocaleDateString('pt-BR');
-                    const dataSaidaFormatada = saida ? new Date(saida.data_de_saida).toLocaleDateString('pt-BR') : '';
+                  const dataEntradaFormatada = new Date(entrada.data_de_entrada).toLocaleDateString('pt-BR');
+                  const dataSaidaFormatada = saida ? new Date(saida.data_de_saida).toLocaleDateString('pt-BR') : '';
 
-                    const getObservacao = (data) => data && data.observacao ? data.observacao : "N/A";
-                    const valorReal = (valor) => parseFloat(valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+                  const getObservacao = (data) => data && data.observacao ? data.observacao : "N/A";
+                  const valorReal = (valor) => parseFloat(valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
 
-                    const modalHtml = `
-                     <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                           <div class="modal-content">
-                              <div class="modal-header bg-success text-white d-flex justify-content-between">
-                                 <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
-                                 <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
-                                    <i class="fa fa-times fa-lg"></i>
-                                 </button>
+                  const modalHtml = `
+                    <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                        <div class="modal-content">
+                          <div class="modal-header bg-success text-white d-flex justify-content-between">
+                            <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do Tombo</h3>
+                            <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                              <i class="fa fa-times fa-lg"></i>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <div class="card">
+                              <div class="card-body pb-0">
+                                <h5 class="card-title">${entrada.descricao}</h5>
+                                <p class="card-text">
+                                  <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
+                                  <strong>Tombo:</strong> ${entrada.tombo} <br/>
+                                  <strong>Data de Entrada:</strong> ${dataEntradaFormatada} <br/>
+                                  <strong>Categoria:</strong> ${entrada.categoria} <br/>
+                                  <strong>Doc Origem:</strong> ${entrada.doc_origem} <br/>
+                                  <strong>Estoque:</strong> ${entrada.estoque} <br/>
+                                  <strong>Valor:</strong> ${valorReal(entrada.valor)} <br/>
+                                  <strong>Situação:</strong> ${entrada.situacao} <br/>
+                                  <strong>Observação:</strong> ${getObservacao(entrada)} <br/>
+                                  <hr>
+                                  ${entrada.pago === 1 ? (saida ? `
+                                    <h5 class="bg-danger text-white p-2">Dados da Saída</h5>
+                                    <strong>Data de Saída:</strong> ${dataSaidaFormatada} <br/>
+                                    <strong>Doc Saída:</strong> ${saida.doc_saida} <br/>
+                                    <strong>Referência:</strong> ${saida.referencia} <br/>
+                                    <strong>Destino:</strong> ${saida.destino.toUpperCase()} <br/>
+                                    <strong>Posto/Graduação:</strong> ${saida.posto_graduacao.toUpperCase()} <br/>
+                                    <strong>Matrícula Funcional:</strong> ${saida.mat_funcional} <br/>
+                                    <strong>Telefone:</strong> ${saida.telefone} <br/>
+                                    <strong>Nome Completo:</strong> ${saida.nome_completo} <br/>
+                                    <strong>Observação de Saída:</strong> ${getObservacao(saida)} <br/>` : `
+                                    <h5 class="bg-secondary text-white p-2">Item foi dado como pago, mas não há detalhes de saída.</h5>`) : `
+                                    <h5 class="bg-secondary text-white p-2">Item consta no estoque, ainda não foi pago.</h5>`}
+                                </p>
                               </div>
-                              <div class="modal-body">
-                                 <div class="card">
-                                    <div class="card-body pb-0">
-                                       <h5 class="card-title">${entrada.descricao}</h5>
-                                       <p class="card-text">
-                                          <h5 class="bg-primary text-white p-2">Dados da Entrada</h5>
-                                          <strong>Tombo:</strong> ${entrada.tombo} <br/>
-                                          <strong>Data de Entrada:</strong> ${dataEntradaFormatada} <br/>
-                                          <strong>Categoria:</strong> ${entrada.categoria} <br/>
-                                          <strong>Doc Origem:</strong> ${entrada.doc_origem} <br/>
-                                          <strong>Estoque:</strong> ${entrada.estoque} <br/>
-                                          <strong>Valor:</strong> ${valorReal(entrada.valor)} <br/>
-                                          <strong>Situação:</strong> ${entrada.situacao} <br/>
-                                          <strong>Observação:</strong> ${getObservacao(entrada)} <br/>
-                                          <hr>
-                                          ${saida ? `
-                                          <h5 class="bg-danger text-white p-2">Dados da Saída</h5>
-                                          <strong>Data de Saída:</strong> ${dataSaidaFormatada} <br/>
-                                          <strong>Doc Saída:</strong> ${saida.doc_saida} <br/>
-                                          <strong>Referência:</strong> ${saida.referencia} <br/>
-                                          <strong>Destino:</strong> ${saida.destino.toUpperCase()} <br/>
-                                          <strong>Posto/Graduação:</strong> ${saida.posto_graduacao.toUpperCase()} <br/>
-                                          <strong>Matrícula Funcional:</strong> ${saida.mat_funcional} <br/>
-                                          <strong>Telefone:</strong> ${saida.telefone} <br/>
-                                          <strong>Nome Completo:</strong> ${saida.nome_completo} <br/>
-                                          <strong>Observação de Saída:</strong> ${getObservacao(saida)} <br/> ` : `
-                                          <h5 class="bg-secondary text-white p-2">Item consta no estoque, ainda não foi pago.</h5>`}
-                                       </p>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
+                            </div>
+                          </div>
                         </div>
-                     </div>
+                      </div>
+                    </div>
                   `;
 
-                    const modalDiv = document.createElement('div');
-                    modalDiv.innerHTML = modalHtml;
-                    document.body.appendChild(modalDiv);
+                  const modalDiv = document.createElement('div');
+                  modalDiv.innerHTML = modalHtml;
+                  document.body.appendChild(modalDiv);
 
-                    const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
-                      backdrop: true,
-                      focus: true
-                    });
+                  const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
+                    backdrop: true,
+                    focus: true
+                  });
 
-                    const modalDialog = document.querySelector('.modal-dialog');
-                    modalDialog.classList.add('modal-zoom-in');
+                  const modalDialog = document.querySelector('.modal-dialog');
+                  modalDialog.classList.add('modal-zoom-in');
 
-                    infoTomboModal.show();
-                    infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
-                      document.getElementById('pesquisa-form').reset();
-                      resultadosDiv.innerHTML = '';
-                      modalDiv.remove();
-                    });
-                  } else {
-                    alert('Desculpe, mas esse tombo é inválido ou ainda não foi cadastrado, tente novamente.');
+                  infoTomboModal.show();
+                  infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
                     document.getElementById('pesquisa-form').reset();
                     resultadosDiv.innerHTML = '';
-                  }
-                } catch (error) {
-                  console.error("Erro ao buscar informações do tombo:", error);
-                  alert('Erro ao buscar informações do tombo.');
+                    modalDiv.remove();
+                  });
+                } else {
+                  alert('Desculpe, mas esse tombo é inválido ou ainda não foi cadastrado, tente novamente.');
                   document.getElementById('pesquisa-form').reset();
                   resultadosDiv.innerHTML = '';
                 }
+              } catch (error) {
+                console.error("Erro ao buscar informações do tombo:", error);
+                alert('Erro ao buscar informações do tombo.');
+                document.getElementById('pesquisa-form').reset();
+                resultadosDiv.innerHTML = '';
               }
-            });
-          }
-        });
-      </script>
+            }
+          });
+        }
+      });
+    </script>
   </body>
 </html>
