inclusão das colunas numero nota fiscal , valor do bem e termo de entrega na tabela de itens pagos

--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -191,7 +191,7 @@
                                           <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
                                           <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
                                           <strong>DOC ORIGEM:</strong> ${item.doc_origem ? item.doc_origem.toUpperCase() : 'N/A'} <br/> <!-- Novo campo -->
-                                          <strong>VALOR:</strong> ${item.valor && !isNaN(parseFloat(item.valor)) ? parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) : 'R$ 0,00'} <br/>
+                                          <strong>VALOR:</strong> ${item.valor ?  parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) : 'R$ 0,00'} <br>
                                           <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
                                           <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
                                           <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
