melhorias na formatação do pdf

--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -112,18 +112,22 @@
                            <label class="form-label fw-bold">Posto/Graduação</label>
                            <select class="form-control mb-2" id="postoGrad">
                               <option value="">Selecione</option>
-                              <option value="sd">SD.</option>
-                              <option value="cb">CB.</option>
-                              <option value="3sgt">3º SGT.</option>
-                              <option value="2sgt">2º SGT.</option>
-                              <option value="1sgt">1º SGT.</option>
-                              <option value="st">ST.</option>
-                              <option value="2ten">2º TEN.</option>
-                              <option value="1ten">1º TEN.</option>
-                              <option value="cap">CAP.</option>
-                              <option value="maj">MAJ.</option>
-                              <option value="tenCel">TEN. CEL.</option>
-                              <option value="cel">CEL.</option>
+                              <option value="SD">SD.</option>
+                              <option value="CB">CB.</option>
+                              <option value="3º SGT">3º SGT.</option>
+                              <option value="2º SGT">2º SGT.</option>
+                              <option value="1º SGT">1º SGT.</option>
+                              <option value="SUB TEN.">ST.</option>
+                              <option value="2º TEN. QOPM">2º TEN. QOPM</option>
+                              <option value="2º TEN. QOAPM">2º TEN. QOAPM</option>
+                              <option value="1º TEN. QOPM">1º TEN. QOPM</option>
+                              <option value="1º TEN. QOPM">1º TEN. QOAPM</option>
+                              <option value="CAP. QOPM">CAP. QOPM</option>
+                              <option value="CAP. QOAPM">CAP QOAPM.</option>
+                              <option value="MAJ. QOPM">MAJ. QOPM</option>
+                              <option value="MAJ. QOAPM">MAJ. QOAPM</option>
+                              <option value="TEN CEL.">TEN. CEL.</option>
+                              <option value="CEL.">CEL.</option>
                            </select>
                         </div>
                      </div>
@@ -173,8 +177,7 @@
                      </div>
 
                      <div class="d-flex  mt-3 justify-content-around">
-                        <button id="submit-btn" type="submit" class="btn btn-success my-3 w-10">Registrar
-                           Saída</button>
+                        <button id="submit-btn" type="submit" class="btn btn-success my-3 w-10">Registrar Saída</button>
                      </div>
                   </div>
                </div>
