--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -79,12 +79,19 @@
          <div class="row align-items-center mb-3 px-3">
             <div class="col d-flex justify-content-between align-items-center bg-success py-2 rounded" style="border-bottom: 4px solid orange;">
                <h2 class="text-white mt-0 fw-bold flex-grow-1 text-center">Itens que saíram do estoque</h2>
-               <a href="/generate-pdf-itens-pagos" class="btn btn-outline-light btn-header fw-bold ms-3">Gerar PDF</a>
+               <div class="d-flex align-items-center">
+                  <label for="formato" class="text-white me-2">Formato:</label>
+                  <select id="formato" class="form-select form-select-sm me-2" style="width: auto;">
+                     <option value="pdf">PDF</option>
+                     <option value="excel">Excel</option>
+                  </select>
+                  <a href="#" id="exportarBtn" class="btn btn-outline-light btn-header fw-bold">Gerar Relatório</a>
+               </div>
             </div>
          </div>
          <div class="table-container">
             <table class="table table-striped table-hover mb-0">
-               <thead>
+               <thead class="thead-success">
                   <tr>
                      <th class="text-center">ID</th>
                      <th class="text-center">Data da Saída</th>
@@ -93,7 +100,7 @@
                      <th class="text-center">Destino</th>
                      <th class="text-center">NUP (Suite)</th>
                      <th class="text-center">Termo de Entrega</th>
-                     <th class="text-center">Doc Origem</th> <!-- Nova coluna -->
+                     <th class="text-center">Doc Origem</th>
                      <th class="text-center">Valor</th>
                      <th class="text-center">Vizualizar</th>
                   </tr>
@@ -102,32 +109,15 @@
                   <% if (itensPagos.length > 0) { %>
                      <% itensPagos.forEach(function(item) { %>
                         <tr>
+                           <td class="py-1 text-center"><%= item.id %></td>
+                           <td class="py-1 text-center"><%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %></td>
+                           <td class="py-1"><%= item.descricao.toUpperCase() %></td>
+                           <td class="py-1 text-center"><%= item.tombo_estoqueatual %></td>
+                           <td class="py-1 text-center"><%= item.destino.toUpperCase() %></td>
+                           <td class="py-1 text-center"><%= item.referencia.toUpperCase() %></td>
+                           <td class="py-1 text-center"><%= item.doc_saida.toUpperCase() %></td>
+                           <td class="py-1 text-center"><%= item.doc_origem ? item.doc_origem.toUpperCase() : 'N/A' %></td>
                            <td class="py-1 text-center">
-                              <%= item.id %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
-                           </td>
-                           <td class="py-1">
-                              <%= item.descricao.toUpperCase() %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= item.tombo_estoqueatual %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= item.destino.toUpperCase() %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= item.referencia.toUpperCase() %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= item.doc_saida.toUpperCase() %>
-                           </td>
-                           <td class="py-1 text-center">
-                              <%= item.doc_origem ? item.doc_origem.toUpperCase() : 'N/A' %>
-                           </td> <!-- Nova coluna -->
-                           <td class="py-1 text-center">
-                              <% console.log('Valor do item:', item.valor); %>
                               <% if (item.valor && !isNaN(parseFloat(item.valor))) { %>
                                  <%= parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) %>
                               <% } else { %>
@@ -135,24 +125,23 @@
                               <% } %>
                            </td>
                            <td class="py-1 text-center w-10">
-                              <button type="button" class="btn btn-secondary btn-sm btn-action"
-                                 data-id="<%= item.id %>">Detalhes</button>
+                              <button type="button" class="btn btn-secondary btn-sm btn-action" data-id="<%= item.id %>">Detalhes</button>
                            </td>
                         </tr>
-                        <% }); %>
-                     <% } else { %>
-                        <tr>
-                           <td colspan="10" class="text-center">Ainda não há itens Pagos</td> <!-- Ajustado para 10 colunas -->
-                        </tr>
-                     <% } %>
+                     <% }); %>
+                  <% } else { %>
+                     <tr>
+                        <td colspan="10" class="text-center">Ainda não há itens Pagos</td>
+                     </tr>
+                  <% } %>
                </tbody>
             </table>
          </div>
       </div>
    </div>
+
    <!-- JavaScript para exibição do modal -->
    <script>
-      // JavaScript para exibição do modal
       document.addEventListener('DOMContentLoaded', () => {
          const viewButtons = document.querySelectorAll('.btn-action');
          viewButtons.forEach(button => {
@@ -171,38 +160,38 @@
                      item.tombo = item.tombo_estoqueatual;
                      const modalHtml = `
                         <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                              <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                              <div class="modal-content">
-                                 <div class="modal-header bg-success text-white d-flex justify-content-between">
-                                 <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do item pago</h3>
-                                 <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                           <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                           <div class="modal-content">
+                              <div class="modal-header bg-success text-white d-flex justify-content-between">
+                              <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do item pago</h3>
+                              <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
                                  <i class="fa fa-times fa-lg"></i>
-                                 </button>
-                                 </div>
-                                 <div class="modal-body">
-                                 <div class="card">
-                                    <div class="card-body pb-0">
-                                       <h5 class="card-title">${item.descricao}</h5>
-                                       <p class="card-text">
-                                          <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5>
-                                          <strong>TOMBO:</strong> ${item.tombo} <br/>
-                                          <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
-                                          <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/>
-                                          <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
-                                          <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
-                                          <strong>DOC ORIGEM:</strong> ${item.doc_origem ? item.doc_origem.toUpperCase() : 'N/A'} <br/> <!-- Novo campo -->
-                                          <strong>VALOR:</strong> ${item.valor ?  parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) : 'R$ 0,00'} <br>
-                                          <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
-                                          <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
-                                          <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
-                                          <strong>TELEFONE:</strong> ${item.telefone} <br/>
-                                          <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/>
-                                       </p>
-                                    </div>
-                                 </div>
+                              </button>
+                              </div>
+                              <div class="modal-body">
+                              <div class="card">
+                                 <div class="card-body pb-0">
+                                    <h5 class="card-title">${item.descricao}</h5>
+                                    <p class="card-text">
+                                       <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5>
+                                       <strong>TOMBO:</strong> ${item.tombo} <br/>
+                                       <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
+                                       <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/>
+                                       <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
+                                       <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
+                                       <strong>DOC ORIGEM:</strong> ${item.doc_origem ? item.doc_origem.toUpperCase() : 'N/A'} <br/>
+                                       <strong>VALOR:</strong> ${item.valor ? parseFloat(item.valor).toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) : 'R$ 0,00'} <br>
+                                       <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
+                                       <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
+                                       <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
+                                       <strong>TELEFONE:</strong> ${item.telefone} <br/>
+                                       <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/>
+                                    </p>
                                  </div>
                               </div>
+                              </div>
                            </div>
+                        </div>
                      </div>
                   `;
                      const modalDiv = document.createElement('div');
@@ -221,6 +210,14 @@
                   console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
                }
             });
+         });
+
+         // Adicionar evento para o botão de exportação
+         const exportarBtn = document.getElementById('exportarBtn');
+         exportarBtn.addEventListener('click', (event) => {
+            event.preventDefault();
+            const formato = document.getElementById('formato').value;
+            window.location.href = `/relatorio/itens-pagos?formato=${formato}`;
          });
       });
    </script>
