--- a/src/views/pages/register copy.ejs
+++ b/src/views/pages/register copy.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <%- include('../partials/head', { title: 'Registrar novo usuário' }) %>
+
    <style>
       .input-custom:focus {
          outline: 0;
          box-shadow: none !important;
       }
    </style>
+
    <body>
       <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
          <div class="border p-4 py-5 rounded shadow-lg caixa-externa">
@@ -17,27 +20,23 @@
                      <%= erro %>
                   </div>
                <% } %>
+
                <% if (success) { %>
                   <div class="alert alert-success"> <%= success %> </div>
+
                   <script>
                      setTimeout(function () {
                            window.location.href = "/login";
                      }, 2000);  // 2 segundos antes de redirecionar
                   </script>
-               <% } else { %>
+
+                  <% } else { %>
                      <form action="/register" method="POST">
                            <div class="form-group mb-3">
-                              <label for="matricula" class="form-label">Matrícula Funcional</label>
+                              <label for="user" class="form-label">Usuário</label>
                               <div class="input-group">
                                  <span class="input-group-text"><i class="bi bi-person"></i></span>
-                                 <input type="text" class="form-control input-custom" id="matricula" name="matricula" placeholder="Entre com sua MF" required>
-                              </div>
-                           </div>
-                           <div class="form-group mb-3">
-                              <label for="nome_completo" class="form-label">Nome Completo</label>
-                              <div class="input-group">
-                                 <span class="input-group-text"><i class="bi bi-person"></i></span>
-                                 <input type="text" class="form-control input-custom" id="nome_completo" name="nome_completo" placeholder="Entre com seu Nome Completo" required>
+                                 <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
                               </div>
                            </div>
                            <div class="form-group mb-3">
@@ -51,17 +50,21 @@
                               <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
                            </div>
                      </form>
-               <% } %>
+                  <% } %>
+               </div>
          </div>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-      <script>
+
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+         
+         <script>
          window.onload = function () {
-               document.getElementById('matricula').focus(); // Corrigido de 'user' para 'matricula'
+               document.getElementById('user').focus();
          };
-         document.getElementById('matricula').addEventListener('input', function () {
-               this.value = this.value.toLowerCase(); // Mantém matrícula em minúsculas
+
+         document.getElementById('user').addEventListener('input', function () {
+               this.value = this.value.toLowerCase();
          });
       </script>
    </body>
+
 </html>
